--- a/web/001/2.html
+++ b/web/001/2.html
@@ -12,6 +12,6 @@
         <li><a href="3.html">JavaScript</a></li>
     </ol>   
     <h2>CSS</h2>
-    <p>css는 html을 수정 할 때 사용하는 도구로 추정된다.</p>
+    <p>css는 표현 방법을 정해주는 언어.</p>
 </body>
 </html>
