--- a/web/wallpaper.html
+++ b/web/wallpaper.html
@@ -5,9 +5,12 @@
 </head>
 <body>
     <h1> Introduce My Wallpaper</h1>
-    <h2> Game</h2>
+    <p>바탕화면은 컴퓨터를 사용할때 많이 접하게 되는 곳으로써, 자주 쓰는 기능들을 주로 바탕화면에 배치시키게 됩니다.</p>
+    
+    <h2>Game</h2>
     VALORANT, Aim Lab
 
-    <h2> Utility</h2>
+    <h2>Utility</h2>
+    OBS, Visual Studio Code
 </body>
 </html>
